--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                     <button class="nav-btn" data-section="projects">~/Projects</button>
                     <button class="nav-btn" data-section="about">~/AboutMe</button>
                     <button class="nav-btn" data-section="contact">~/Contact</button>
+                    <button class="nav-btn" data-section="assets">~/Assets</button>
+                    <a href="https://github.com/YerdosNar"><img src="assets/failed.jpg" alt="arch logo"></a>
                 </nav>
             </header>
 
