Assets, README.md

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
             <!-- Terminal Header/Navigation -->
             <header class="terminal-header">
                 <nav class="terminal-nav">
-                    <button class="nav-btn active" data-section="home">~/</button>
-                    <button class="nav-btn" data-section="projects">~/Projects</button>
-                    <button class="nav-btn" data-section="about">~/AboutMe</button>
-                    <button class="nav-btn" data-section="contact">~/Contact</button>
-                    <button class="nav-btn" data-section="assets">~/Assets</button>
-                    <a href="https://github.com/YerdosNar"><img src="assets/failed.jpg" alt="arch logo"></a>
+                    <div class="nav-buttons">
+                        <button class="nav-btn active" data-section="home">~/</button>
+                        <button class="nav-btn" data-section="projects">~/Projects</button>
+                        <button class="nav-btn" data-section="about">~/AboutMe</button>
+                        <button class="nav-btn" data-section="contact">~/Contact</button>
+                        <button class="nav-btn" data-section="assets">~/Assets</button>
+                    </div>
+                    <a href="https://github.com/YerdosNar" class="header-logo"><img src="assets/failed.jpg" alt="arch logo"></a>
                 </nav>
             </header>
 
@@ -58,6 +60,10 @@
 
                 <!-- Contact Section -->
                 <section id="contact" class="terminal-section">
+                </section>
+
+                <!-- Assets Section -->
+                <section id="assets" class="terminal-section">
                 </section>
             </main>
 
