trying to increase security, but I am bad at it

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                         <button class="nav-btn" data-section="contact">~/Contact</button>
                         <button class="nav-btn" data-section="assets">~/Assets</button>
                     </div>
-                    <a href="https://github.com/YerdosNar" class="header-logo"><img src="assets/failed.jpg" alt="arch logo"></a>
+                    <a href="https://github.com/YerdosNar" class="header-logo"><img src="assets/arch.png" alt="arch logo"></a>
                 </nav>
             </header>
 
